--- a/index.html
+++ b/index.html
@@ -3,63 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentaciones de Alumnos</title>
+    <title>Presentación de alumnos - Institut La Guineueta</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: #004d80;
+            color: #333;
+            background-color: #FFF;
+            line-height: 1.6;
         }
         h1 {
-            text-align: center;
-            font-size: 32px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            font-size: 18px;
+            color: #FFF;
+            background-color: #FF7F00;
+            padding: 20px;
             margin-bottom: 10px;
         }
         img {
-            width: 200px;
-            height: auto;
-        }
-        .image-container {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        .image-container img {
+            max-height: 8em;
+            width: auto;
             margin: 10px;
+            vertical-align: middle;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 10px;
         }
         strong {
-            color: #004d80;
+            color: #FF7F00;
         }
     </style>
 </head>
 <body>
-    <h1>Presentaciones de Alumnos</h1>
+    <h1>Presentación de alumnos</h1>
     <ul>
-        <li><strong>Jordi Adrover Gonfaus:</strong> Funcions i disseny de components en centres de processament de dades (Páginas 9-10)</li>
-        <li><strong>Sergi Miquel:</strong> Punts de distribució del cablatge (POD) (Apartado 1.3.3, Páginas 25-26)</li>
-        <li><strong>Miguel Ángel Serrano:</strong> Organització i seguretat física dels CPD (Apartados 1.4 y 1.4.1, Páginas 27-28)</li>
-        <li><strong>Quim Rius:</strong> Eines de mesura del rendiment (Páginas 51-53)</li>
-        <li><strong>Emanuel Villaseca:</strong> Necessitat de la prevenció de riscos laborals y condicions de treball i salut (Apartados 2, 2.1, Páginas 55-56)</li>
-        <li><strong>Gonzalo Huancas Gonzales:</strong> Documentació de procediments i incidències (Apartado 1.6.2, Páginas 47-48)</li>
-        <li><strong>Christian Cabrera:</strong> Condicions de treball i salut (Apartado 2.2, Páginas 57-59)</li>
-        <li><strong>Alejandro Cuadros:</strong> Sistemes d'alimentació redundant (Apartado 1.5.1, Páginas 37-38)</li>
-        <li><strong>Víctor Vera García:</strong> Requisits en el disseny (Páginas 13-15)</li>
-        <li><strong>Jesús Molina:</strong> Disseny de l'arquitectura (Apartado 1.1.3, Páginas 14-16)</li>
-        <li><strong>Robert Mihailescu:</strong> Arquitectures d'alta disponibilitat (Apartado 1.5, Páginas 35-36)</li>
-      </ul>
-<div class="image-container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/IBM_data_center_in_Southfield%2C_Michigan.jpg" alt="Data Center">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Servidores_rack.jpg" alt="Servidores en Rack">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Cable_management.jpg" alt="Gestión de cables">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f9/Office_workers_using_computers.jpg" alt="Trabajadores usando computadoras">
-</div>
-
+        <li><strong>Jordi Adrover Gonfaus:</strong> Introducción (Páginas 9-10) <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/IBM_data_center_in_Southfield%2C_Michigan.jpg" alt="Data Center"></li>
+        <li><strong>Sergi Miquel:</strong> 1.3.3 Punts de distribució del cablatge (POD) (Páginas 25-26)</li>
+        <li><strong>Miguel Ángel Serrano:</strong> 1.4 Organització i seguretat física dels CPD (Páginas 27-30) <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Servidores_rack.jpg" alt="Servidores en Rack"></li>
+        <li><strong>Quim Rius:</strong> Páginas 51, 52, 53 (Eines de mesura del rendiment) (Páginas 51-53)</li>
+        <li><strong>Emanuel Villaseca:</strong> 2 Necessitat de la prevenció de riscos laborals (Páginas 55-56) y 2.1 Condicions de treball i salut (Páginas 57-59) <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Cable_management.jpg" alt="Gestión de cables"></li>
+        <li><strong>Gonzalo Huancas Gonzales:</strong> 1.6.2 Documentació de procediments i incidències (Páginas 47-48)</li>
+        <li><strong>Christian Cabrera:</strong> 2.2 Condicions de treball i salut (Páginas 57-59)</li>
+        <li><strong>Alejandro Cuadros:</strong> 1.5.1 Sistemes d'alimentació redundant (Páginas 37-38) <img src="https://upload.wikimedia.org/wikipedia/commons/f/f9/Office_workers_using_computers.jpg" alt="Trabajadores usando computadoras"></li>
+        <li><strong>Víctor Vera García:</strong> 1.1.2 Requisits en el disseny (Páginas 13-15)</li>
+        <li><strong>Jesús Molina:</strong>1.1.3 Disseny de l'arquitectura (Páginas 14-16)</li>
+        <li><strong>Robert Mihailescu:</strong> 1.5 Arquitectures d'alta disponibilitat (Páginas 35-36) <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/RAID_10.png" alt="RAID 10"></li>
+</ul>
 </body>
 </html>
