--- a/index.html
+++ b/index.html
@@ -1,53 +1,75 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentación de alumnos - Institut La Guineueta</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             color: #333;
-            background-color: #FFF;
-            line-height: 1.6;
+            background-color: #fff;
         }
         h1 {
-            color: #FFF;
-            background-color: #FF7F00;
-            padding: 20px;
-            margin-bottom: 10px;
+            color: #FFA500;
+            font-size: 24px;
+        }
+        h4 {
+            font-weight: bold;
+        }
+        li {
+            margin-bottom: 15px;
         }
         img {
             max-height: 8em;
-            width: auto;
-            margin: 10px;
-            vertical-align: middle;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        strong {
-            color: #FF7F00;
+            padding-left: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Presentación de alumnos</h1>
+    <h1>Presentaciones de los alumnos del Institut La Guineueta</h1>
     <ul>
-        <li><strong>Jordi Adrover Gonfaus:</strong> Introducción (Páginas 9-10) <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/IBM_data_center_in_Southfield%2C_Michigan.jpg" alt="Data Center"></li>
-        <li><strong>Sergi Miquel:</strong> 1.3.3 Punts de distribució del cablatge (POD) (Páginas 25-26)</li>
-        <li><strong>Miguel Ángel Serrano:</strong> 1.4 Organització i seguretat física dels CPD (Páginas 27-30) <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Servidores_rack.jpg" alt="Servidores en Rack"></li>
-        <li><strong>Quim Rius:</strong> Páginas 51, 52, 53 (Eines de mesura del rendiment) (Páginas 51-53)</li>
-        <li><strong>Emanuel Villaseca:</strong> 2 Necessitat de la prevenció de riscos laborals (Páginas 55-56) y 2.1 Condicions de treball i salut (Páginas 57-59) <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Cable_management.jpg" alt="Gestión de cables"></li>
-        <li><strong>Gonzalo Huancas Gonzales:</strong> 1.6.2 Documentació de procediments i incidències (Páginas 47-48)</li>
-        <li><strong>Christian Cabrera:</strong> 2.2 Condicions de treball i salut (Páginas 57-59)</li>
-        <li><strong>Alejandro Cuadros:</strong> 1.5.1 Sistemes d'alimentació redundant (Páginas 37-38) <img src="https://upload.wikimedia.org/wikipedia/commons/f/f9/Office_workers_using_computers.jpg" alt="Trabajadores usando computadoras"></li>
-        <li><strong>Víctor Vera García:</strong> 1.1.2 Requisits en el disseny (Páginas 13-15)</li>
-        <li><strong>Jesús Molina:</strong>1.1.3 Disseny de l'arquitectura (Páginas 14-16)</li>
-        <li><strong>Robert Mihailescu:</strong> 1.5 Arquitectures d'alta disponibilitat (Páginas 35-36) <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/RAID_10.png" alt="RAID 10"></li>
-</ul>
-</body>
+        <li>
+            <h4>Introducción (Páginas 9 y 10)</h4>
+            <h6>Jordi Adrover Gonfaus</h6>
+        </li>
+        <li>
+            <h4>1.1.2 Requisits en el disseny (Páginas 13, 14 y 15)</h4>
+            <h6>Víctor Vera García</h6>
+        </li>
+        <li>
+            <h4>1.3.3 Punts de distribució del cablatge (POD) (Páginas 25-26)</h4>
+            <h6>Sergi Miquel</h6>
+        </li>
+        <li>
+            <h4>1.4 Organització i seguretat física dels CPD (Páginas 27-28) y 1.4.1 Estructures de suport (Páginas 27-28)</h4>
+            <h6>Miguel Ángel Serrano</h6>
+        </li>
+        <li>
+            <h4>Eines de mesura del rendiment (Páginas 51, 52, 53)</h4>
+            <h6>Quim Rius</h6>
+        </li>
+        <li>
+            <h4>2 Necessitat de la prevenció de riscos laborals (Páginas 55-56) y 2.1 Condicions de treball i salut (Páginas 57-59)</h4>
+            <h6>Emanuel Villaseca</h6>
+        </li>
+        <li>
+            <h4>2.2 Condicions de treball i salut (Páginas 60-61)</h4>
+            <h6>Christian Cabrera</h6>
+        </li>
+        <li>
+            <h4>1.6.2 Documentació de procediments i incidències (Páginas 47-48)</h4>
+            <h6>Gonzalo Huancas Gonzales</h6>
+        </li>
+        <li>
+            <h4>1.5 Elaboració de la documentació (Páginas 40-41)</h4>
+            <h6>Mihailescu Florin</h6>
+        </li>
+    </ul>
+    <img src="https://images.pexels.com/photos/230544/pexels-photo-230544.jpeg" alt="Introducción">
+    <img src="https://images.pexels.com/photos/3862132/pexels-photo-3862132.jpeg" alt="POD">
+    <img src="https://images.pexels.com/photos/3184319/pexels-photo-3184319.jpeg" alt="Organització i seguretat física">
+    <img src="https://images.pexels.com/photos/669615/pexels-photo-669615.jpeg" alt="Eines de mesura">
+    <img src="https://images.pexels.com/photos/3626675/pexels-photo-3626675.jpeg" alt="Prevenció de riscos laborals">
+    <img src="https://images.pexels.com/photos/3807688/pexels-photo-3807688.jpeg" alt="Condicions de treball i salut">
+    <img src="https://images.pexels.com/photos/374074/pexels-photo-374074.jpeg" alt="Documentació de procediments i incidències">
+    <img src="https://images.pexels.com/photos/594084/pexels-photo-594084.jpeg" alt="Elaboració de la documentació">
+    </body>
 </html>
