--- a/index.html
+++ b/index.html
@@ -25,51 +25,27 @@
 </head>
 <body>
     <h1>Presentaciones de los alumnos del Institut La Guineueta</h1>
+    
     <ul>
-        <li>
-            <h4>Introducción (Páginas 9 y 10)</h4>
-            <h6>Jordi Adrover Gonfaus</h6>
-        </li>
-        <li>
-            <h4>1.1.2 Requisits en el disseny (Páginas 13, 14 y 15)</h4>
-            <h6>Víctor Vera García</h6>
-        </li>
-        <li>
-            <h4>1.3.3 Punts de distribució del cablatge (POD) (Páginas 25-26)</h4>
-            <h6>Sergi Miquel</h6>
-        </li>
-        <li>
-            <h4>1.4 Organització i seguretat física dels CPD (Páginas 27-28) y 1.4.1 Estructures de suport (Páginas 27-28)</h4>
-            <h6>Miguel Ángel Serrano</h6>
-        </li>
-        <li>
-            <h4>Eines de mesura del rendiment (Páginas 51, 52, 53)</h4>
-            <h6>Quim Rius</h6>
-        </li>
-        <li>
-            <h4>2 Necessitat de la prevenció de riscos laborals (Páginas 55-56) y 2.1 Condicions de treball i salut (Páginas 57-59)</h4>
-            <h6>Emanuel Villaseca</h6>
-        </li>
-        <li>
-            <h4>2.2 Condicions de treball i salut (Páginas 60-61)</h4>
-            <h6>Christian Cabrera</h6>
-        </li>
-        <li>
-            <h4>1.6.2 Documentació de procediments i incidències (Páginas 47-48)</h4>
-            <h6>Gonzalo Huancas Gonzales</h6>
-        </li>
-        <li>
-            <h4>1.5 Elaboració de la documentació (Páginas 40-41)</h4>
-            <h6>Mihailescu Florin</h6>
-        </li>
+      <li><h4>1.1 Utilitat dels centres de procés de dades <span style="font-size: smaller;">(Páginas 9-10)</span></h4><h5>Jordi Adrover Gonfaus</h5></li>
+      <li><h4>1.1.3 Disseny de l'arquitectura <span style="font-size: smaller;">(Páginas 13-15)</span></h4><h5>Víctor Vera García</h5></li>
+      <li><h4>1.3.3 Punts de distribució del cablatge (POD) <span style="font-size: smaller;">(Páginas 25)</span></h4><h5>Sergi Miquel</h5></li>
+      <li><h4>1.4 Organització i seguretat física dels CPD <span style="font-size: smaller;">(Páginas 27)</span></h4><h5>Miguel Ángel Serrano</h5></li>
+      <li><h4>1.4.1 Estructures de suport. Bastidors o racks i patch panels <span style="font-size: smaller;">(Páginas 27)</span></h4><h5>Miguel Ángel Serrano</h5></li>
+      <li><h4>1.5 Arquitectures d'alta disponibilitat <span style="font-size: smaller;">(Páginas 35)</span></h4><h5>Robert Mihailescu</h5></li>
+      <li><h4>1.5.1 Sistemes d'alimentació redundant <span style="font-size: smaller;">(Páginas 37)</span></h4><h5>Alejandro Cuadros</h5></li>
+      <li><h4>1.6.2 Documentació de procediments i incidències <span style="font-size: smaller;">(Páginas 47)</span></h4><h5>Gonzalo Huancas Gonzales</h5></li>
+      <li><h4>2 Necessitat de la prevenció de riscos laborals i 2.1 Condicions de treball i salut <span style="font-size: smaller;">(Páginas 55-56)</span></h4><h5>Emanuel Villaseca</h5></li>
+      <li><h4>2.2 Condicions de treball i salut <span style="font-size: smaller;">(Páginas 57)</span></h4><h5>Christian Cabrera</h5></li>
+      <li><h4>2.3.4 Prevenció en el muntatge i manteniment d'ordinadors <span style="font-size: smaller;">(Páginas 68)</span></h4><h5>Jesús Molina</h5></li>
+
     </ul>
+
     <img src="https://images.pexels.com/photos/230544/pexels-photo-230544.jpeg" alt="Introducción">
     <img src="https://images.pexels.com/photos/3862132/pexels-photo-3862132.jpeg" alt="POD">
     <img src="https://images.pexels.com/photos/3184319/pexels-photo-3184319.jpeg" alt="Organització i seguretat física">
     <img src="https://images.pexels.com/photos/669615/pexels-photo-669615.jpeg" alt="Eines de mesura">
-    <img src="https://images.pexels.com/photos/3626675/pexels-photo-3626675.jpeg" alt="Prevenció de riscos laborals">
     <img src="https://images.pexels.com/photos/3807688/pexels-photo-3807688.jpeg" alt="Condicions de treball i salut">
     <img src="https://images.pexels.com/photos/374074/pexels-photo-374074.jpeg" alt="Documentació de procediments i incidències">
-    <img src="https://images.pexels.com/photos/594084/pexels-photo-594084.jpeg" alt="Elaboració de la documentació">
     </body>
 </html>
